# enlitweb

./: Dockerfile  manage.py  pyproject.toml  render.yaml  requirements.txt
enlit/: asgi.py  pyproject.toml  settings.py  urls.py  wsgi.py
web/: render.yaml
web/mysite/mysite/: settings.py
