[tool.poetry]
name = "enlit"
version = "0.0.1"
description = "enlit website"
authors = ["darvin7531"]
license = "MiT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.5"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
